k8s/admin-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-backend-service
  namespace: bookstore
spec:
  type: ClusterIP
  selector:
    app: admin-backend
  ports:
    - port: 8000
      targetPort: 8000
