k8s/monitoring-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-backend-service
  namespace: bookstore
spec:
  type: ClusterIP
  selector:
    app: monitoring-backend
  ports:
    - port: 8000
      targetPort: 8000
