k8s/public-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-backend-service
  namespace: bookstore
spec:
  type: ClusterIP
  selector:
    app: public-backend
  ports:
    - port: 8000
      targetPort: 8000
